# test_zero_crossing_az60a

./: CMakeLists.txt  README.md
include/: IO08_REF.H  PHYS_REF.H  PRJ_REF.H
src/: EEPROM.C  INT_CTRL.C  IO_DRV.C  MAIN.C  SPI.C  UART_PIN.C
